lib/tests/snapshots/golden_test__check@dependencies.yml.snap
---
source: lib/tests/golden_test.rs
expression: golden
input_file: lib/tests/test_inputs/dependencies.yml
---
stdout: |2
    hello╭╴ Started task ‘hello’
         │hello!
         ╰╴ Task ‘hello’ completed
    world╭╴ Started task ‘world’
         │world
         ╰╴ Task ‘world’ completed
  default╭╴ Started task ‘default’
         ╰╴ Task ‘default’ completed

