lib/tests/snapshots/golden_test__check@env.yml.snap
---
source: lib/tests/golden_test.rs
expression: golden
input_file: lib/tests/test_inputs/env.yml
---
stdout: |2
     inner╭╴ Started task ‘inner’
          │inner
          ╰╴ Task ‘inner’ completed
     outer╭╴ Started task ‘outer’
          │outer
          ╰╴ Task ‘outer’ completed
  override╭╴ Started task ‘override’
          │inner-override
          ╰╴ Task ‘override’ completed
   default╭╴ Started task ‘default’
          ╰╴ Task ‘default’ completed

