lib/tests/snapshots/golden_test__check@extended-cycle.yml.snap
---
source: lib/tests/golden_test.rs
expression: golden
input_file: lib/tests/test_inputs/extended-cycle.yml
---
error: |2
    × Nur file "[…].yml" has a task cycle: a → b → c → default → a

