lib/tests/snapshots/golden_test__check@self-cycle.yml.snap
---
source: lib/tests/golden_test.rs
expression: golden
input_file: lib/tests/test_inputs/self-cycle.yml
---
error: |2
    × Nur file "/workspaces/nur/lib/tests/test_inputs/self-cycle.yml" has a task cycle: default → default

