lib/tests/snapshots/golden_test__check@variations.yml.snap
---
source: lib/tests/golden_test.rs
expression: golden
input_file: lib/tests/test_inputs/variations.yml
---
stdout: |2
      runSh╭╴ Started task ‘runSh’
           │run sh
           ╰╴ Task ‘runSh’ completed
  runString╭╴ Started task ‘runString’
           │simple run
           ╰╴ Task ‘runString’ completed
    default╭╴ Started task ‘default’
           │plain cmd
           │alternate cmd
           ╰╴ Task ‘default’ completed

